2011-10-25  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* added operator mod - modulo [request: Swantje Preuschmann]

2011-10-20  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* using CDI library version 1.5.3
	* Version 1.5.3 released

2011-10-19  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* Monarith (monadd, monsub, monmul, mondiv): wrong results for 3D variables (bug fix) [report: Chris Fletcher]

2011-10-02  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

        * deflate compression with netCDF4 doesn't work (bug fix) [report: Geert Jan van Oldenborgh]

2011-09-26  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* Added operator: muldoy - Multiply with day of year [request: David Gobbett]

2011-09-19  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* eca_cdd, eca_cwd, eca_rr1, eca_sdii: variable parameter [request: Martin Stendel]

2011-09-16  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* gridarea: bug fix for coarse grid cells with lons between 350 and 0 degrees [report: Aiko Voigt]

2011-09-14  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* sellonlatbox: correct lon bounds if necessary (bug fix) [report: Klaus Keuler]

2011-08-30  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* ifthenelse: uses only the first time step of the first input file (bug fix) [report: Ronny Petrik]

2011-08-22  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* using CDI library version 1.5.2
	* Version 1.5.2 released

2011-08-19  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* ymon<stat>: preserve time axis attributes (big fix) [report: Martin Juckes]

2011-08-12  Cedrick Ansorge  <Cedrick.Ansorge@zmaw.de>

        * eof, eoftime, eofspatial, eof3d - Empirical Orthogonal Functions:bug fix [report: Eileen Dahms and Frank Lunkeit]
            There was a bug in the calculation of the Frobenius norm, which has only been triggered in some cases
            when using a low precision. The normalization has been changed thus that the eigenvectors are not weighted